--- a/Phyton.html
+++ b/Phyton.html
@@ -46,7 +46,7 @@
         <!-- Awal Judul -->
         <div class="row text-center">
           <div class="col">
-            <h4 class="text-light">Analyze using Phyton in google collabs</h4>
+            <h4 class="text-light">Analyze using Python in google collabs</h4>
           </div>
         </div>
       </div>
