--- a/myproject.html
+++ b/myproject.html
@@ -79,8 +79,8 @@
             <div class="card bg-black pp">
               <img src="Pictures/Projects/Phyton.jpg" class="card-img-top" alt="Projects1" />
               <div class="card-body">
-                <h4 class="card-title text-center text-light">My Phyton Analyze Project</h4>
-                <p class="card-text text-white">These are some pictures from my project analyze using phyton with pandas library in google collab</p>
+                <h4 class="card-title text-center text-light">My Python Analyze Project</h4>
+                <p class="card-text text-white">These are some pictures from my project analyze using python with pandas library in google collab</p>
                 <a href="Phyton.html" class="btn btn-warning">See Details >></a>
               </div>
             </div>
